Fix alignment of pseudo-radio button in IE11

--- a/teachers_digital_platform/css/cf-enhancements/molecules/form-fields.less
+++ b/teachers_digital_platform/css/cf-enhancements/molecules/form-fields.less
@@ -58,6 +58,9 @@
 
 .m-form-field_radio-text  {
     color: @gray;
+    display: inline-block;
+    margin-left: 0.25em;
+    vertical-align: top;
 
     &.is-active {
         color: @black;
